[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Background/sBackground.png" type="Texture" id=1]
[ext_resource path="res://Assets/Background/sBackgroundOverlay.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/sKeybinds.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/sSquareCursor.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/sTriangleCursor.png" type="Texture" id=5]
[ext_resource path="res://Assets/Characters/sShadowSmall.png" type="Texture" id=6]
[ext_resource path="res://Assets/Characters/sPlayer.png" type="Texture" id=7]
[ext_resource path="res://Scripts/UI/KeybindsMenu.gd" type="Script" id=8]
[ext_resource path="res://Assets/UI/sCross.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/sCrossOn.png" type="Texture" id=10]
[ext_resource path="res://Scenes/UI/DashTimer.tscn" type="PackedScene" id=11]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 500, 500 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 500, 0, 500, 500 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1000, 0, 500, 500 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=9]
radius = 137.0
height = 0.0

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 500, 500 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 500, 500 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Square",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "Triangle",
"speed": 5.0
} ]

[sub_resource type="Animation" id=11]
resource_name = "CrossHover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ), Vector2( 0.28, 0.28 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "CrossUnhover"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.28, 0.28 ), Vector2( 0.25, 0.25 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ) ]
}

[node name="KeybindsMenu" type="Node2D"]
script = ExtResource( 8 )

[node name="SBackground" type="Sprite" parent="."]
position = Vector2( 576, 324 )
scale = Vector2( 1.125, 1.08 )
texture = ExtResource( 1 )

[node name="SKeybinds" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.32549 )
position = Vector2( 582, 261 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 576, 324 )
scale = Vector2( 0.25, 0.25 )

[node name="Sprite" type="Sprite" parent="Area2D"]
modulate = Color( 1, 1, 1, 0.607843 )
texture = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
frames = SubResource( 8 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -4, -11 )
shape = SubResource( 9 )

[node name="Cursor" type="AnimatedSprite" parent="Area2D"]
frames = SubResource( 10 )
animation = "Square"

[node name="Position2D" type="Position2D" parent="Area2D/Cursor"]
position = Vector2( 224, -8 )

[node name="DashDurationTimer" type="Timer" parent="Area2D"]
wait_time = 0.3
one_shot = true

[node name="DashAvailable" type="Timer" parent="Area2D"]
wait_time = 0.6
one_shot = true

[node name="SBackgroundOverlay" type="Sprite" parent="."]
position = Vector2( 576, 324 )
scale = Vector2( 1.125, 1.08 )
texture = ExtResource( 2 )

[node name="Cross" type="TextureButton" parent="."]
margin_left = 936.0
margin_top = -100.0
margin_right = 1256.0
margin_bottom = 200.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 160, 150 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cross"]
anims/CrossHover = SubResource( 11 )
anims/CrossUnhover = SubResource( 13 )
anims/RESET = SubResource( 12 )

[node name="DashTimer" parent="." instance=ExtResource( 11 )]
position = Vector2( 32, 38 )

[connection signal="timeout" from="Area2D/DashDurationTimer" to="." method="_on_DashDurationTimer_timeout"]
[connection signal="timeout" from="Area2D/DashAvailable" to="." method="_on_DashAvailable_timeout"]
[connection signal="mouse_entered" from="Cross" to="." method="_on_Cross_mouse_entered"]
[connection signal="mouse_exited" from="Cross" to="." method="_on_Cross_mouse_exited"]
[connection signal="pressed" from="Cross" to="." method="_on_Cross_pressed"]
